# MILIA

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  config.yaml.DEPRECATED  main.py  migrate_config.py.DEPRECATED  noxfile.py  pyproject.toml  research_experiments.yaml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup.yml  docker-publish.yml  release.yml
archive/: MILIA_GitHub_Release_Preparation_Guide.md  MILIA_Pipeline_Project_Structure.md  MILIA_Production_Release_File_Audit.md  MILIA_Pydantic_Implementation_Blueprint.md  MILIA_Test_Recommendations.md  MILIA_Testing_Mock_Pollution_Prevention_Guide.md  MILIA_YAML_SPLITTING_BLUEPRINT.md
archive/Addig_New_Dataset/: MILIA_Adding_New_Datasets_Implementation_Blueprint.md  MILIA_Recommended_Datasets_Roadmap.md
archive/Addig_New_Dataset/00_VQM24/: VQM24_Wavefunction_Feature_IOData_Analysis.txt  VQM24_dataset  VQM24_inspection_DMC.txt  VQM24_inspection_dft_all.txt  VQM24_inspection_saddles.txt  VQM24_inspection_uniques.txt  VQM24_inspection_wavefunctions.txt  VQM24_molden_slicing_strategy.txt
configs/: descriptors.yaml  filter_config.yaml  main.yaml  models.yaml  plugins.yaml  structural_features.yaml  transformations.yaml
configs/datasets/: ani1ccx.yaml  ani1x.yaml  ani2x.yaml  dft.yaml  dmc.yaml  qdpi.yaml  qm9.yaml  rmd17.yaml  wavefunction.yaml  xxmd.yaml
docs/: CUSTOM_TRANSFORMS_QUICK_REFERENCE.md  DELIVERABLES_SUMMARY.md  DESCRIPTOR_REFERENCE.md  INDEX.md  MILIA_EdgeIndex_Bug_Analysis_v3.md  MILIA_HPO_Implementation_Blueprint.md  MILIA_Models_Integration_Verification_Plan.md  MODELS_MODULE_LIFECYCLE_GUIDE.md  PLUGIN_IMPLEMENTATION_GUIDE.md  Plugin_Configuration_Quick_Reference.md  Plugin_Configuration_Schema_Technical_Reference.md  Plugin_Development_Checklist.md  Plugin_Distribution_Quick_Reference.md  Plugin_Exceptions_Quick_Reference.md  Plugin_Implementation_Summary.md  Plugin_system_KEY_INFO.md  README.md  README_PYG_MODELS_DOCS.md  conf.py  getting-started.md  index.md  requirements.txt
docs/Phase_8_5_Implementation_Blueprint_DEFERRED/: Phase_8_5_Implementation_Blueprint.md  __init__.py  plugins.py
docs/api/: index.md
examples/preprocessing/: README.md  quick_preprocess.yaml  wavefunction_preprocess.yaml
milia_pipeline/: __init__.py  cli_manager.py  exceptions.py  logging_config.py
milia_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
milia_pipeline/config/: __init__.py  config_accessors.py  config_constants.py  config_containers.py  config_loader.py  config_schemas.py  data_refining.py  validators.py
milia_pipeline/datasets/: __init__.py  base.py  milia_dataset.py  protocols.py  registry.py
milia_pipeline/datasets/implementations/: __init__.py  ani1ccx.py  ani1x.py  ani2x.py  dft.py  dmc.py  qdpi.py  qm9.py  rmd17.py  wavefunction.py  xxmd.py
milia_pipeline/descriptors/: __init__.py  descriptor_calculator.py  descriptor_categories.py  descriptor_integration.py  descriptor_plugin_system.py  descriptor_registry.py  descriptor_validator.py
milia_pipeline/handlers/: __init__.py  base_handler.py  dataset_handler_integration.py.backup  dataset_handlers.py.DEPRECATED  handler_registry.py
milia_pipeline/handlers/implementations/: __init__.py  ani1ccx.py  ani1x.py  ani2x.py  dft.py  dmc.py  qdpi.py  qm9.py  rmd17.py  wavefunction.py  xxmd.py
milia_pipeline/models/: __init__.py
milia_pipeline/models/acceleration/: __init__.py  device_manager.py  (+3 more)
milia_pipeline/molecules/: __init__.py  mol_conversion_utils.py  mol_structural_features.py  molecule_converter_core.py  molecule_feature_enricher.py  molecule_filters.py  molecule_validator.py  property_enrichment.py
milia_pipeline/plugins/: __init__.py
milia_pipeline/preprocessing/: __init__.py  base_preprocessor.py  registry.py
milia_pipeline/transformations/: __init__.py  custom_transforms.py  graph_transforms.py  plugin_system.py  research_api.py
scripts/: VQM24_npz_chk.py  VQM24_npz_slicing.py  analyze_imports.py  generate_descriptor_docs.py  generate_molden_dataset.py  generate_pyg_models_docs.py  optimizer.py  preprocess_wavefunctions.py  verification_wavfunc_npz_features.py
test_data/: DFT_all_test66.pt  checkpoint_prediction_tracker.md  molecules.csv  molecules.sdf  molecules.xyz  molecules_inchi.csv
tests/: conftest.py  test__init__config.py  test__init__datasets.py  test__init__descriptors.py  test__init__handlers.py  test__init__milia_pipeline.py  test__init__models.py  test__init__models_acceleration.py  test__init__models_builders.py  test__init__models_deployment.py  test__init__models_hpo.py  test__init__models_post_training.py  test__init__molecules.py  test__init__plugins.py  test__init__preprocessing.py  test__init__transformations.py  test_architecture_builder_unit.py  test_archive_handlers_unit.py  test_base_handler_unit.py  test_base_preprocessor_unit.py  test_callbacks_unit.py  test_checkpoint_manager_unit.py  test_cli_manager_unit.py  test_cli_preprocessing_integration.py  test_computation_optimization_unit.py  test_config_accessors_unit.py  test_config_bridge_unit.py  test_config_constants_unit.py  test_config_containers_unit.py  test_config_loader_unit.py  test_config_parser_unit.py  test_config_schemas_unit.py  test_config_split_mode_parity.py  test_config_validation_comprehensive.py  test_contract_dataset_base.py  test_contract_dataset_handler_protocol.py  test_contract_model_registries.py  test_contract_registry_consistency.py  test_custom_transforms_unit.py  test_data_converter_unit.py  (+119 more)
utils/: conftest_original.py
utils/DEPRECATED_TESTs/: Quick_Usage_example_Phase1.py  test_IOData.py  test_config_yaml_target_selection_config_hpo_manager_integration.py  test_config_yaml_unit.py  test_dataset_handler_integration_unit.py  test_dataset_handlers_unit.py  test_model_categories_unit.py
(+91 files in other folders)
