# =============================================================================
# MILIA — pyproject.toml
# =============================================================================
# Canonical project metadata per PEP 517/518/621/639.
# Migrated from setup.py (100% static metadata — no dynamic build logic).
#
# Version is read dynamically from milia_pipeline/__init__.py.__version__
# via the setuptools `attr` directive (single source of truth).
#
# Dependencies: This project uses conda for heavy scientific packages
# (PyTorch, RDKit, PyG, etc.) — see Dockerfile and environment.yml.
# Runtime dependencies are intentionally left empty here to avoid conflicts
# with conda-managed binary packages. Install via:
#   conda env create -f environment.yml
#   pip install -e .
# =============================================================================

# ---- Build System (PEP 517/518) ----
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# ---- Project Metadata (PEP 621/639) ----
[project]
name = "milia"
dynamic = ["version"]
description = "Molecular graph processing and machine learning framework for molecular sciences"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Asadollah (Shahram) Boshra", email = "a.boshra@gmail.com"},
    {name = "Ilia Boshra", email = "ilia.boshra@gmail.com"},
]
maintainers = [
    {name = "Asadollah (Shahram) Boshra", email = "a.boshra@gmail.com"},
    {name = "Ilia Boshra", email = "ilia.boshra@gmail.com"},
]

keywords = [
    "molecular machine learning",
    "quantum chemistry",
    "graph neural networks",
    "molecular descriptors",
    "pytorch geometric",
    "dataset pipeline",
    "drug discovery",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# Runtime dependencies are managed by conda (see Dockerfile / environment.yml).
# Left empty intentionally to avoid pip/conda conflicts with binary packages
# such as PyTorch, RDKit, and PyTorch Geometric.
dependencies = []

[project.optional-dependencies]
# Developer / CI dependencies (installed via: pip install -e ".[dev]")
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff",
]
# Documentation build dependencies (installed via: pip install -e ".[docs]")
# Sphinx <8.2: 8.2+ drops Python 3.10 support (sphinx-doc/sphinx#13325).
# Also available as: pip install -r docs/requirements.txt
docs = [
    "sphinx>=8.1,<8.2",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/shahram-boshra/MILIA"
Repository = "https://github.com/shahram-boshra/MILIA"
Documentation = "https://milia.readthedocs.io"
"Bug Tracker" = "https://github.com/shahram-boshra/MILIA/issues"
Changelog = "https://github.com/shahram-boshra/MILIA/blob/main/CHANGELOG.md"

# CLI entry point: `milia` command invokes main.main()
# main.py resides at project root (outside milia_pipeline package).
# pip install -e . adds the project root to sys.path, making `main` importable.
[project.scripts]
milia = "main:main"

# ---- Setuptools-Specific Configuration ----

# Dynamic version: read from milia_pipeline/__init__.py's __version__ attribute.
# This is the single source of truth for the project version.
[tool.setuptools.dynamic]
version = {attr = "milia_pipeline.__version__"}

# Package discovery: auto-find all packages under the project root.
# Excludes test directories, scripts, docs, and legacy/archive directories.
[tool.setuptools.packages.find]
include = ["milia_pipeline*"]
exclude = [
    "tests*",
    "test_data*",
    "scripts*",
    "docs*",
    "examples*",
    "experiments*",
    "archive*",
    "_legacy*",
]

# Include YAML configuration files bundled inside the package.
[tool.setuptools.package-data]
milia_pipeline = ["*.yaml", "*.yml"]

# ---- Tool Configurations ----

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "smoke: Smoke tests — fast, first gate in CI/CD pipeline",
    "contract: Interface contract validation tests",
    "e2e: End-to-end workflow tests",
    "regression: Regression protection tests",
    "thread_safety: Concurrent access tests",
    "slow: Tests taking > 30 seconds (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

# ruff (linter + formatter)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["milia_pipeline"]

# coverage.py
[tool.coverage.run]
source = ["milia_pipeline"]
omit = [
    "tests/*",
    "scripts/*",
    "examples/*",
    "archive/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
