# =============================================================================
# MILIA — pyproject.toml
# =============================================================================
# Canonical project metadata per PEP 517/518/621/639.
# Migrated from setup.py (100% static metadata — no dynamic build logic).
#
# Version is read dynamically from milia_pipeline/__init__.py.__version__
# via the setuptools `attr` directive (single source of truth).
#
# Dependencies: This project uses conda for heavy scientific packages
# (PyTorch, RDKit, PyG, etc.) — see Dockerfile and environment.yml.
# Runtime dependencies are intentionally left empty here to avoid conflicts
# with conda-managed binary packages. Install via:
#   conda env create -f environment.yml
#   pip install -e .
# =============================================================================

# ---- Build System (PEP 517/518) ----
[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

# ---- Project Metadata (PEP 621/639) ----
[project]
name = "milia"
dynamic = ["version"]
description = "Molecular graph processing and machine learning framework for molecular sciences"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Asadollah (Shahram) Boshra", email = "a.boshra@gmail.com"},
    {name = "Ilia Boshra", email = "ilia.boshra@gmail.com"},
]
maintainers = [
    {name = "Asadollah (Shahram) Boshra", email = "a.boshra@gmail.com"},
    {name = "Ilia Boshra", email = "ilia.boshra@gmail.com"},
]

keywords = [
    "molecular machine learning",
    "quantum chemistry",
    "graph neural networks",
    "molecular descriptors",
    "pytorch geometric",
    "dataset pipeline",
    "drug discovery",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# Runtime dependencies are managed by conda (see Dockerfile / environment.yml).
# Left empty intentionally to avoid pip/conda conflicts with binary packages
# such as PyTorch, RDKit, and PyTorch Geometric.
dependencies = []

[project.optional-dependencies]
# Developer / CI dependencies (installed via: pip install -e ".[dev]")
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff",
]
# Documentation build dependencies (installed via: pip install -e ".[docs]")
# Sphinx <8.2: 8.2+ drops Python 3.10 support (sphinx-doc/sphinx#13325).
# Also available as: pip install -r docs/requirements.txt
docs = [
    "sphinx>=8.1,<8.2",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/shahram-boshra/MILIA"
Repository = "https://github.com/shahram-boshra/MILIA"
Documentation = "https://milia.readthedocs.io"
"Bug Tracker" = "https://github.com/shahram-boshra/MILIA/issues"
Changelog = "https://github.com/shahram-boshra/MILIA/blob/main/CHANGELOG.md"

# CLI entry point: `milia` command invokes main.main()
# main.py resides at project root (outside milia_pipeline package).
# It is explicitly included via [tool.setuptools] py-modules = ["main"]
# so that both editable (`pip install -e .`) and non-editable (`pip install .`)
# installs make the `main` module importable from site-packages.
[project.scripts]
milia = "main:main"

# ---- Setuptools-Specific Configuration ----

# Dynamic version: read from milia_pipeline/__init__.py's __version__ attribute.
# This is the single source of truth for the project version.
[tool.setuptools.dynamic]
version = {attr = "milia_pipeline.__version__"}

# Standalone modules: include main.py (project root) as a top-level module.
# Required for the `milia` CLI entry point (`main:main`) to resolve via
# `from main import main` after non-editable install (`pip install .`).
# Without this, main.py is NOT packaged into the wheel and the `milia`
# command fails with: ModuleNotFoundError: No module named 'main'.
[tool.setuptools]
py-modules = ["main"]

# Package discovery: auto-find all packages under the project root.
# Excludes test directories, scripts, docs, and legacy/archive directories.
[tool.setuptools.packages.find]
include = ["milia_pipeline*"]
exclude = [
    "tests*",
    "test_data*",
    "scripts*",
    "docs*",
    "examples*",
    "experiments*",
    "archive*",
    "_legacy*",
]

# Include YAML configuration files bundled inside the package.
[tool.setuptools.package-data]
milia_pipeline = ["*.yaml", "*.yml"]

# ---- Tool Configurations ----

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
# Warning policy (last-match-wins — pytest applies filters bottom-up):
#
#   1. Silence DeprecationWarning broadly. Rationale: MILIA's heavy scientific
#      dependency tree (matplotlib, plotly, kaleido, pyparsing, torch,
#      torch_geometric, rdkit, pydantic) emits a steady stream of upstream
#      deprecation chatter that is OUTSIDE this project's control and clutters
#      reviewer-facing test output. Documented authoritative example: matplotlib
#      ._mathtext invokes pyparsing's deprecated camelCase API (setName,
#      setParseAction, parseAll, leaveWhitespace, endQuoteChar, unquoteResults)
#      whenever any matplotlib log-scale tick label is rendered — generated
#      ~265 of 270 warnings observed in test_visualization_unit.py. Will be
#      resolved upstream (matplotlib + pyparsing maintainers); not actionable
#      from MILIA. Reference: pytest filterwarnings docs, last-match-wins rule.
#
#   2. Re-enable DeprecationWarning as error ONLY for first-party code
#      (milia_pipeline.*). Rationale: MILIA must not silently rely on its own
#      deprecated APIs. If MILIA itself ever emits a DeprecationWarning, the
#      test suite fails — forcing the issue to be fixed at source rather than
#      filtered. This preserves the "fail loud on our own code" discipline
#      while accepting that we cannot fix our dependencies for them.
#
#   3. Silence ONE specific PyTorch Geometric UserWarning: the "Unable to
#      accurately infer 'num_nodes'" notice emitted by
#      torch_geometric.data.storage when a Data() object has no node-level
#      attributes. Per PyG's own documentation (Data.num_nodes property
#      docstring), this warning is INFORMATIONAL and is the documented
#      mechanism by which PyG asks callers to set num_nodes explicitly when
#      working with edge-only graphs. MILIA's pyg_integration.compute_graph_
#      statistics() function is required to gracefully handle empty Data()
#      objects, and the test suite (TestComputeGraphStatisticsExtended::
#      test_no_node_info_at_all) deliberately exercises this path to assert
#      stats["num_nodes"] is None. The warning is therefore expected behavior
#      under test and is not actionable from MILIA. Filter scope is narrow
#      (exact message prefix + UserWarning category + torch_geometric.data.
#      storage module) so all other PyG UserWarnings continue to surface.
#      The message prefix and emitting module path are stable across PyG
#      versions 2.0.3 through latest (verified upstream source).
#
#   4. Silence ONE specific PyTorch UserWarning: the "Detected call of
#      `lr_scheduler.step()` before `optimizer.step()`" notice emitted by
#      torch.optim.lr_scheduler.LRScheduler.step() when its internal
#      _step_count advances ahead of the optimizer's _step_count. This is
#      a heuristic intended to catch end-user training-loop ordering bugs;
#      it is NOT a defect detector for scheduler unit tests. MILIA's
#      tests/test_schedulers_unit.py (TestSchedulerFunctionality and
#      TestEdgeCases classes) deliberately drive scheduler.step() in
#      isolation to verify LR-decay arithmetic (StepLR halving, exponential
#      decay, cosine curve, plateau behavior) without constructing a full
#      training loop — by design, no optimizer.step() precedes these
#      scheduler steps. The warning is therefore expected behavior under
#      these unit tests and is not actionable from MILIA. Filter scope is
#      narrow (exact message prefix + UserWarning category + torch.optim.
#      lr_scheduler module) so any unrelated PyTorch UserWarning continues
#      to surface.
#
#   5. Silence ONE specific PyTorch UserWarning emitted by PyTorch ITSELF
#      from inside SequentialLR.step(): "The epoch parameter in
#      `scheduler.step()` was not necessary and is being deprecated …".
#      Despite the message wording, this warning is raised as UserWarning
#      (not DeprecationWarning) — verified in PyTorch source
#      torch/optim/lr_scheduler.py: warnings.warn(EPOCH_DEPRECATION_WARNING,
#      UserWarning). The warning is triggered because PyTorch's own
#      SequentialLR.step() implementation calls the inner scheduler with
#      scheduler.step(0) when crossing a milestone, passing the deprecated
#      epoch argument internally. MILIA's create_warmup_scheduler() helper
#      (milia_pipeline/models/training/schedulers.py) builds a SequentialLR
#      and never passes epoch from MILIA code. This is a well-known,
#      acknowledged upstream PyTorch bug tracked in issues
#      pytorch/pytorch#67586, #76113, #116776, and #130018 — fix is upstream
#      and not actionable from MILIA. Filter scope is narrow (exact message
#      prefix + UserWarning category + torch.optim.lr_scheduler module).
#
# References:
#   - https://docs.pytest.org/en/stable/how-to/capture-warnings.html
#   - https://pytorch-geometric.readthedocs.io/en/latest/_modules/torch_geometric/data/data.html
#     (Data.num_nodes property — documents the inference-warning contract)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Unable to accurately infer 'num_nodes':UserWarning:torch_geometric.data.storage",
    "ignore:Detected call of `lr_scheduler.step\\(\\)` before `optimizer.step\\(\\)`:UserWarning:torch.optim.lr_scheduler",
    "ignore:The epoch parameter in `scheduler.step\\(\\)` was not necessary and is being deprecated:UserWarning:torch.optim.lr_scheduler",
    "error::DeprecationWarning:milia_pipeline",
    "error::PendingDeprecationWarning:milia_pipeline",
]
markers = [
    "smoke: Smoke tests — fast, first gate in CI/CD pipeline",
    "contract: Interface contract validation tests",
    "e2e: End-to-end workflow tests",
    "regression: Regression protection tests",
    "thread_safety: Concurrent access tests",
    "slow: Tests taking > 30 seconds (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

# ruff (linter + formatter)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["milia_pipeline"]

[tool.ruff.lint.per-file-ignores]
# Test files use deferred imports (conftest.py design) to avoid collection-time
# failures when heavy deps (torch, torch_geometric, numpy) are not installed.
# This is a deliberate architectural decision — NOT suppressible at source.
"tests/*" = ["E402"]
# __init__.py files re-export symbols for public API convenience.
# F401: Re-exported names appear "unused" to the linter but are consumed by importers.
# E402: Imports come after module docstrings/comments — standard packaging practice.
"__init__.py" = ["F401", "E402"]

# coverage.py
[tool.coverage.run]
source = ["milia_pipeline"]
omit = [
    "tests/*",
    "scripts/*",
    "examples/*",
    "archive/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
